Adds header, and beginnings of homepage markup and styling.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width" /> <!-- Set the viewport width to device width for mobile -->
+	<title>SMASH! Sydney Manga and Anime Show (2013 Prototype)</title>
 
-	<!-- Set the viewport width to device width for mobile -->
-	<meta name="viewport" content="width=device-width" />
-
-	<title>Welcome to Foundation</title>
-
-	<!-- Included CSS Files -->
 	<link rel="stylesheet" href="stylesheets/app.css">
 
 	<script src="javascripts/foundation/modernizr.foundation.js"></script>
@@ -22,23 +18,54 @@
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-
 </head>
 <body>
 
-	<div class="row">
-		<div class="twelve columns">
-			<h2>Welcome to Foundation</h2>
-			<p>This is version 3.0.6 released on July 20, 2012</p>
-			<hr />
-		</div>
+  <header class="site large">
+    <a href="/" class="row">
+      <div class="twelve columns">
+        <h1>SMASH! Sydney Manga and Anime Show</h1>
+        <h2>Back on August 10, 2013</h2>
+        <h3>Sydney Convention Centre</h3>
+      </div>
+    </a>
+  </header>
+
+  <navigation class="site">
+    <ul class="row">
+      <li class="two columns"><a href="/">Details</a></li>
+      <li class="two columns"><a href="/">Events</a></li>
+      <li class="two columns"><a href="/">Guests</a></li>
+      <li class="two columns"><a href="/">Vendors</a></li>
+      <li class="two columns"><a href="/">Tickets</a></li>
+      <li class="two columns"><a href="/">Community</a></li>
+    </ul>
+  </navigation>
+
+	<div class="row home">
+    <div class="six columns">
+      <section class="blurb">
+        SMASH! is Sydney's happiest event celebrating anime, manga, video games &amp; Japanese pop culture. It's on <em>Saturday, August 10</em> at the <em>Sydney Convention Centre</em>. Tickets are <em>$29 online</em>. See you there!
+      </section>
+
+      <section class="news">
+        <h1>What's Going On?</h1>
+      </section>
+    </div>
+
+		<section class="six columns featuring">
+			<h1>Featuring</h1>
+      <ul>
+        <li></li>
+      </ul>
+		</section>
 	</div>
 
+<!--
 	<div class="row">
 		<div class="eight columns">
 			<h3>The Grid</h3>
 
-			<!-- Grid Example -->
 			<div class="row">
 				<div class="twelve columns">
 					<div class="panel">
@@ -118,6 +145,7 @@
 			</ul>
 		</div>
 	</div>
+-->
 	
 	<!-- Included JS Files (Uncompressed) -->
 	<!--
