Adds "Featuring" list with thumbnails, tightens everything up for mobile.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div class="row home">
     <div class="six columns">
       <section class="blurb">
-        SMASH! is Sydney's happiest event celebrating anime, manga, video games &amp; Japanese pop culture. It's on <em>Saturday, August 10</em> at the <em>Sydney Convention Centre</em>. Tickets are <em>$29 online</em>. See you there!
+        SMASH! is Sydney's happiest event celebrating anime, manga, video games &amp; Japanese pop culture. It's on <a href="#">Saturday, August 10</a> at the <a href="#">Sydney Convention Centre</a>. Tickets are <a href="#">$29 online or $35 at the door</a>. See you there!
       </section>
 
       <section class="news">
@@ -56,7 +56,42 @@
 		<section class="six columns featuring">
 			<h1>Featuring</h1>
       <ul>
-        <li></li>
+        <li class="row"><a href="#">
+          <div class="three columns">
+            <img src="/images/home/square1_large.jpg" class="thumb" />
+          </div>
+          <div class="nine columns">
+            <h2>Cosplay Competition</h2>
+            <p>Dress up as your favourite characters for fun, compete for prizes, or learn the skills at our cosplay panels.</p>
+          </div>
+        </a></li>
+        <li class="row"><a href="#">
+          <div class="three columns">
+            <img src="/images/home/square2_large.jpg" class="thumb" />
+          </div>
+          <div class="nine columns">
+            <h2>Artists, Merch and Stalls</h2>
+            <p>Browse the works of over 50 local artists, or pick up DVDs, manga, models, props and much, much more!</p>
+          </div>
+        </a></li>
+        <li class="row"><a href="#">
+          <div class="three columns">
+            <img src="/images/home/square3_large.jpg" class="thumb" />
+          </div>
+          <div class="nine columns">
+            <h2>Gundam Modelling</h2>
+            <p>Free model workshops! Enter the Gunpla Builders World Cup and win a trip to Japan!</p>
+          </div>
+        </a></li>
+        <li class="row"><a href="#">
+          <div class="three columns">
+            <img src="/images/home/square4_large.jpg" class="thumb" />
+          </div>
+          <div class="nine columns">
+            <h2>Cosplay Competition</h2>
+            <p>Dress up as your favourite characters for fun, compete for prizes, or learn the skills at our cosplay panels.</p>
+          </div>
+        </a></li>
       </ul>
 		</section>
 	</div>
