--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </ul>
   </navigation>
 
-	<div class="row home">
+	<div class="body row home">
     <div class="six columns">
       <section class="blurb">
         SMASH! is Sydney's happiest event celebrating anime, manga, video games &amp; Japanese pop culture. It's on <a href="#">Saturday, August 10</a> at the <a href="#">Sydney Convention Centre</a>. Tickets are <a href="#">$29 online or $35 at the door</a>. See you there!
@@ -95,6 +95,23 @@
       </ul>
 		</section>
 	</div>
+
+  <footer>
+    <section class="sponsors">
+      <h1>Brought to you by:</h1>
+      <ul>
+        <li><a class="madman" href="http://www.madman.com.au">Madman Entertainment</a></li>
+        <li><a class="hobbyco" href="http://www.hobbyco.com.au">HobbyCo</a></li>
+        <li><a class="jpf" href="http://www.jpf.org.au">The Japan Foundation</a></li>
+        <li><a class="supanova" href="http://www.supanova.com.au">Supanova</a></li>
+        <li><a class="jal" href="http://www.au.jal.com/aul/en">Japan Airlines</a></li>
+        <li><a class="bushiroad" href="http://www.bushiroad.fm">Bushiroad</a></li>
+      </ul>
+    </section>
+    <section class="legal">
+      <p>Hey, you're at the bottom of the page! Why not check out our <a href="/privacy/">privacy policy</a>! You could also <a href="/contact/">contact us</a>! Your choices are essentially limitless. Which is to say, you have 2 choices. This website is copyright 2012 by SMASH Inc. SMASH Inc is a non-profit organisation brought to you by the character ス and cup ramen. SMASH! is people, too. ‘Reading the Whole Page’ achievement unlocked!</p>
+    </section>
+  </footer>
 
 <!--
 	<div class="row">
