--- a/index.html
+++ b/index.html
@@ -42,61 +42,63 @@
     </ul>
   </navigation>
 
-	<div class="body row home">
-    <div class="six columns">
-      <section class="blurb">
-        SMASH! is Sydney's happiest event celebrating anime, manga, video games &amp; Japanese pop culture. It's on <a href="#">Saturday, August 10</a> at the <a href="#">Sydney Convention Centre</a>. Tickets are <a href="#">$29 online or $35 at the door</a>. See you there!
-      </section>
+	<div class="body home">
+    <div class="row">
+      <div class="six columns">
+        <section class="blurb">
+          SMASH! is Sydney's happiest event celebrating anime, manga, video games &amp; Japanese pop culture. It's on <a href="#">Saturday, August 10</a> at the <a href="#">Sydney Convention Centre</a>. Tickets are <a href="#">$29 online or $35 at the door</a>. See you there!
+        </section>
 
-      <section class="news">
-        <h1>What's Going On?</h1>
+        <section class="news">
+          <h1>What's Going On?</h1>
+        </section>
+      </div>
+
+      <section class="six columns featuring">
+        <h1>Featuring</h1>
+        <ul>
+          <li class="row"><a href="#">
+            <div class="three columns">
+              <img src="/images/home/square1_large.jpg" class="thumb" />
+            </div>
+            <div class="nine columns">
+              <h2>Cosplay Competition</h2>
+              <p>Dress up as your favourite characters for fun, compete for prizes, or learn the skills at our cosplay panels.</p>
+            </div>
+          </a></li>
+          <li class="row"><a href="#">
+            <div class="three columns">
+              <img src="/images/home/square2_large.jpg" class="thumb" />
+            </div>
+            <div class="nine columns">
+              <h2>Artists, Merch and Stalls</h2>
+              <p>Browse the works of over 50 local artists, or pick up DVDs, manga, models, props and much, much more!</p>
+            </div>
+          </a></li>
+          <li class="row"><a href="#">
+            <div class="three columns">
+              <img src="/images/home/square3_large.jpg" class="thumb" />
+            </div>
+            <div class="nine columns">
+              <h2>Gundam Modelling</h2>
+              <p>Free model workshops! Enter the Gunpla Builders World Cup and win a trip to Japan!</p>
+            </div>
+          </a></li>
+          <li class="row"><a href="#">
+            <div class="three columns">
+              <img src="/images/home/square4_large.jpg" class="thumb" />
+            </div>
+            <div class="nine columns">
+              <h2>Cosplay Competition</h2>
+              <p>Dress up as your favourite characters for fun, compete for prizes, or learn the skills at our cosplay panels.</p>
+            </div>
+          </a></li>
+        </ul>
       </section>
     </div>
+  </div>
 
-		<section class="six columns featuring">
-			<h1>Featuring</h1>
-      <ul>
-        <li class="row"><a href="#">
-          <div class="three columns">
-            <img src="/images/home/square1_large.jpg" class="thumb" />
-          </div>
-          <div class="nine columns">
-            <h2>Cosplay Competition</h2>
-            <p>Dress up as your favourite characters for fun, compete for prizes, or learn the skills at our cosplay panels.</p>
-          </div>
-        </a></li>
-        <li class="row"><a href="#">
-          <div class="three columns">
-            <img src="/images/home/square2_large.jpg" class="thumb" />
-          </div>
-          <div class="nine columns">
-            <h2>Artists, Merch and Stalls</h2>
-            <p>Browse the works of over 50 local artists, or pick up DVDs, manga, models, props and much, much more!</p>
-          </div>
-        </a></li>
-        <li class="row"><a href="#">
-          <div class="three columns">
-            <img src="/images/home/square3_large.jpg" class="thumb" />
-          </div>
-          <div class="nine columns">
-            <h2>Gundam Modelling</h2>
-            <p>Free model workshops! Enter the Gunpla Builders World Cup and win a trip to Japan!</p>
-          </div>
-        </a></li>
-        <li class="row"><a href="#">
-          <div class="three columns">
-            <img src="/images/home/square4_large.jpg" class="thumb" />
-          </div>
-          <div class="nine columns">
-            <h2>Cosplay Competition</h2>
-            <p>Dress up as your favourite characters for fun, compete for prizes, or learn the skills at our cosplay panels.</p>
-          </div>
-        </a></li>
-      </ul>
-		</section>
-	</div>
-
-  <footer>
+  <footer class="site row">
     <section class="sponsors">
       <h1>Brought to you by:</h1>
       <ul>
