--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 	<div class="body home">
     <div class="row">
+
       <div class="six columns">
         <section class="blurb">
           SMASH! is Sydney's happiest event celebrating anime, manga, video games &amp; Japanese pop culture. It's on <a href="#">Saturday, August 10</a> at the <a href="#">Sydney Convention Centre</a>. Tickets are <a href="#">$29 online or $35 at the door</a>. See you there!
@@ -91,16 +92,18 @@
             <div class="nine columns">
               <h2>Cosplay Competition</h2>
               <p>Dress up as your favourite characters for fun, compete for prizes, or learn the skills at our cosplay panels.</p>
-            </div>
-          </a></li>
-        </ul>
-      </section>
+              </div>
+            </a></li>
+          </ul>
+        </section>
+      </div>
+
     </div>
   </div>
 
   <footer class="site row">
     <section class="sponsors">
-      <h1>Brought to you by:</h1>
+      <h1 class="twelve columns">Brought to you by:</h1>
       <ul>
         <li><a class="madman" href="http://www.madman.com.au">Madman Entertainment</a></li>
         <li><a class="hobbyco" href="http://www.hobbyco.com.au">HobbyCo</a></li>
@@ -110,7 +113,7 @@
         <li><a class="bushiroad" href="http://www.bushiroad.fm">Bushiroad</a></li>
       </ul>
     </section>
-    <section class="legal">
+    <section class="legal twelve columns">
       <p>Hey, you're at the bottom of the page! Why not check out our <a href="/privacy/">privacy policy</a>! You could also <a href="/contact/">contact us</a>! Your choices are essentially limitless. Which is to say, you have 2 choices. This website is copyright 2012 by SMASH Inc. SMASH Inc is a non-profit organisation brought to you by the character ス and cup ramen. SMASH! is people, too. ‘Reading the Whole Page’ achievement unlocked!</p>
     </section>
   </footer>
@@ -191,8 +194,6 @@
 			<p>We're stoked you want to try Foundation! To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
 
 			<h4>Other Resources</h4>
-			<p>Once you've exhausted the fun in this document, you should check out:</p>
-			<ul class="disc">
 				<li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
 				<li><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</li>
 				<li><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</li>
